Changed title size

--- a/popup.html
+++ b/popup.html
@@ -35,7 +35,8 @@ The popup adds no functionality to the extension, simply provides information an
   </head>
 
   <body>
-    <h2>Features: </h2>
+  <!-- Improve the style of this later --> 
+    <h3>Features: </h3>
     <ul>
      <li>Line length warnings at 80 characters</li>
      <li>Full width coding area and console</li>
